AC_PREREQ([2.67])
AC_INIT([rcracki_mt-gui], [0.2b], [riikard.nordraak@online.de])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
PKG_CHECK_MODULES([OpenSSL], [libcrypto] [libssl], , AC_MSG_ERROR(OpenSSL not found.))

PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.12.0], , AC_MSG_ERROR(GTK+ >= 2.12.0 not found.))
PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.12.0], , AC_MSG_ERROR(GLib >= 2.12.0 not found.))
PKG_CHECK_MODULES([PANGO], [pango >= 1.10], , AC_MSG_ERROR(Pango >= 1.10 not found.))
PKG_CHECK_MODULES([CAIRO], [cairo >= 1.6], , AC_MSG_ERROR(Cairo >= 1.6 not found.))

# Checks for header files.
AC_CHECK_HEADERS([inttypes.h stdint.h stdlib.h string.h sys/param.h sys/time.h unistd.h])
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_CHECK_FUNCS([gettimeofday memset mkdir sysinfo sysconf])

AC_OUTPUT([Makefile])

echo ""
echo "configure done. Type 'make' to compile."
echo ""
